--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: ' (npm ci && npm run build)'
         working-directory: ./frontend
-        REACT_APP_API_BASE_URL: https://us-central1-fir-react-lab.cloudfunctions.net/shoutouts
+        env:
+          REACT_APP_API_BASE_URL: https://us-central1-fir-react-lab.cloudfunctions.net/shoutouts
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
