--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
       - run: ' (npm ci && npm run build)'
         working-directory: ./frontend
         env:
-          REACT_APP_API_BASE_URL: https://us-central1-fir-react-lab.cloudfunctions.net/shoutouts
+          REACT_APP_API_URL: https://us-central1-fir-react-lab.cloudfunctions.net/shoutouts
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
