--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: ' (npm ci && npm run build)'
+      - run: npm ci && npm run build
         working-directory: ./frontend
         env:
           REACT_APP_API_URL: https://us-central1-fir-react-lab.cloudfunctions.net/shoutouts
